updated organization of database handling
